Fikset piler for mobilbrukere og litt sosialkunnskap

--- a/widgets/bland_salter_spill/index.html
+++ b/widgets/bland_salter_spill/index.html
@@ -31,21 +31,21 @@
             </div>
             <div class="saltplassering">
                 <div class="salt" id="AgNO3">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
+                    <img src="../../assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
                     <div class="saltfarge"></div>
                     <div class="saltnavn">AgNO3</div>
                 </div>
             </div>
             <div class="saltplassering">
                 <div class="salt" id="CuSO4">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
+                    <img src="../../assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
                     <div class="saltfarge"></div>
                     <div class="saltnavn">CuSO4*5H2O</div>
                 </div>
             </div>
             <div class="saltplassering">
                 <div class="salt" id="NaOH">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
+                    <img src="../../assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
                     <div class="saltfarge"></div>
                     <div class="saltnavn">NaOH</div>
                 </div>
@@ -55,21 +55,21 @@
         <div id="reagensrør-gruppe2">
             <div class="saltplassering">
                 <div class="salt" id="BaNO32">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
+                    <img src="../../assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
                     <div class="saltfarge"></div>
                     <div class="saltnavn">Ba(NO3)2</div>
                 </div>
             </div>
             <div class="saltplassering">
                 <div class="salt" id="Na2CO3">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
+                    <img src="../../assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
                     <div class="saltfarge"></div>
                     <div class="saltnavn">Na2CO3</div>
                 </div>
             </div>
             <div class="saltplassering">
                 <div class="salt" id="CaCl2">
-                    <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
+                    <img src="../../assets/imgs/kjemi/reagensrør.png" alt="reagensrør">
                     <div class="saltfarge"></div>
                     <div class="saltnavn">CaCl2*2H2O</div>
                 </div>
@@ -77,7 +77,7 @@
         </div>
         <!-- Begerglass i midten av skjermen -->
         <div id="begerglass">
-            <img src="/Fagvalgsider_Elvebakken_VGS/assets/imgs/kjemi/begerglass.png" alt="begerglass">
+            <img src="../../assets/imgs/kjemi/begerglass.png" alt="begerglass">
             <div id="løsningsfarge"></div>
         </div>
         <!-- Bunnseksjon med plass til å skrive reaksjonslikningen, reaksjonstypen og nullstill-knapp -->
