--- a/ssø/index.html
+++ b/ssø/index.html
@@ -97,7 +97,7 @@
                     <p>Samfunnsøkonomi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/entreprenørskap/" class="fag_i_meny">
+                <a href="../programfag/sosialkunnskap/" class="fag_i_meny">
                     <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Sosialkunnskap</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
@@ -112,9 +112,9 @@
                     <p>Matematikk-S</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"></button>
-                <button id="høyre_bla_knapp" class="bla_knapp" onclick="flyttMeny('høyre')"></button>
             </div>
+            <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"></button>
+            <button id="høyre_bla_knapp" class="bla_knapp" onclick="flyttMeny('høyre')"></button>
         </div>
 
         <!-- Rask oversikt der man kan få en oversikt over hva fagene innegår. -->
