Fungerende nok sosialkunnskap

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -98,7 +98,7 @@
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/sosialkunnskap/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/sosialkunnskap/statue_leser.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Sosialkunnskap</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -165,7 +165,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Markedsføring og ledelse</h3>
                     <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - </p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/markedsføring_og_ledelse/">Se mer →</a>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Politikk og menneskerettigheter</h3>
                     <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - r</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/pom">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/" class="fag-bilde">
@@ -183,7 +183,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Språk 3</h3>
                     <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - </p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/språk3/">Se mer →</a>
                 </div>
             </div>
@@ -196,7 +196,7 @@
                         prosesser og bidra til at elevene utvikler en
                         sammensatt og mer helhetlig forståelse av
                         mennesket.</p>
-                    <p class="fag-sitat">"" - r</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/psykologi/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/psykologi/placeholder_psykologi.jpg" class="fag-bilde">
@@ -206,7 +206,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Rettslære</h3>
                     <p class="fag-beskrivelse">Lov og rett er en byggestein i et demokratisk samfunn. Kjennskap til lover og regler er viktig både for den enkelte og for samfunnet. </p>
-                    <p class="fag-sitat">"" - </p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/rettslære/">Se mer →</a>
                 </div>
             </div>
@@ -214,39 +214,13 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Samfunnsgeografi</h3>
                     <p class="fag-beskrivelse">I Samfunnsgeografi studerer vi sammenhengenen mellom det lokale, regionale og globale. Du får engasjert deg i de problemene samfunnet står overfor. Faget tar for seg noen av de mest sentrale globale samfunnsutfordringene som nevnt i FNs bærekraftsmål.</p>
-                    <p class="fag-sitat">"" - r</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/samfunnsgeografi/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="../assets/imgs/" class="fag-bilde">
-                <div class="fag-info">
-                    <h3 class="fag-tittel">Sosialkunnskap</h3>
-                    <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - </p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/sosialkunnskap/">Se mer →</a>
-                </div>
-            </div>
-            <div class="fag-element">
-                <div class="fag-info">
-                    <h3 class="fag-tittel">Matematikk-R</h3>
-                    <p class="fag-beskrivelse">Matematikk R på Elvebakken handler om å forstå moderne anvendelser av matematikk i realfaglige og samfunnsfaglige sammenhenger. Faget gir elevene mulighet til å utvikle et presist språk for kritisk tenkning, evne til problemløsing og matematisk forståelse.</p>
-                    <p class="fag-sitat">"" - r</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/r_matte/">Se mer →</a>
-                </div>
-                <img src="../assets/imgs/matte_r/matte_r_placeholder.png" class="fag-bilde">
-            </div>
-            <div class="fag-element">
-                <img src="../assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
-                <div class="fag-info">
-                    <h3 class="fag-tittel">Matematikk-S</h3>
-                    <p class="fag-beskrivelse">Matematikk S på Elvebakken er et fag som tar sikte på å gi elevene en inngående forståelse av moderne anvendelser av matematikk, spesielt innen samfunnsfaglige og økonomiske områder. Målet er å utruste elevene med en solid matematisk kompetanse og evne til å takle komplekse problemstillinger som oppstår i disse kontekstene.</p>
-                    <p class="fag-sitat">"" - </p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/s_matte/">Se mer →</a>
-                </div>
-            </div>
-            <div class="fag-element">
+                <img src="../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Samfunnsøkonomi</h3>
                     <p class="fag-beskrivelse">Samfunnsøkonomi handler om å forstå det
@@ -256,7 +230,46 @@
                     <p class="fag-sitat">"Earth provides enough to satisfy everyman’s needs, but not everyman’s greed." - Mahatma Gandhi</p>
                     <a class ="fag-se-mer-knapp" href="../programfag/samfunnsøkonomi/">Se mer →</a>
                 </div>
-                <img src="../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Sosialkunnskap</h3>
+                    <p class="fag-beskrivelse"><p>
+                        Vil du forstå
+                        samfunnet du lever i
+                        bedre? Vil du jobbe
+                        med helsefag Vil du
+                        forske på sosiale
+                        problemer eller være
+                        med å utvikle den
+                        moderne
+                        velferdsstaten?
+                    </p>
+                    <br>
+                    <p>
+                        <b>Velg sosialkunnskap!</b>
+                    <p class="fag-sitat"></p>
+                    <a class ="fag-se-mer-knapp" href="../programfag/sosialkunnskap/">Se mer →</a>
+                </div>
+                <img src="../assets/imgs/sosialkunnskap/statue_leser.png" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="../assets/imgs/matte_r/matte_r_placeholder.png" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Matematikk-R</h3>
+                    <p class="fag-beskrivelse">Matematikk R på Elvebakken handler om å forstå moderne anvendelser av matematikk i realfaglige og samfunnsfaglige sammenhenger. Faget gir elevene mulighet til å utvikle et presist språk for kritisk tenkning, evne til problemløsing og matematisk forståelse.</p>
+                    <p class="fag-sitat"></p>
+                    <a class ="fag-se-mer-knapp" href="../programfag/r_matte/">Se mer →</a>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Matematikk-S</h3>
+                    <p class="fag-beskrivelse">Matematikk S på Elvebakken er et fag som tar sikte på å gi elevene en inngående forståelse av moderne anvendelser av matematikk, spesielt innen samfunnsfaglige og økonomiske områder. Målet er å utruste elevene med en solid matematisk kompetanse og evne til å takle komplekse problemstillinger som oppstår i disse kontekstene.</p>
+                    <p class="fag-sitat"></p>
+                    <a class ="fag-se-mer-knapp" href="../programfag/s_matte/">Se mer →</a>
+                </div>
+                <img src="../assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
             </div>
         </div>
     </main>
