--- a/programfag/sosialkunnskap/index.html
+++ b/programfag/sosialkunnskap/index.html
@@ -22,7 +22,18 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Historie og filosofi tar deg med på en reise gjennom tidene, fra de første menneskene til vår egen samtid. Gjennom diskusjoner, kildearbeid og filosofiske samtaler får du utforske store spørsmål om liv, død, samfunn og vitenskap. Dette faget gir deg verktøy til å tenke kritisk, analysere informasjon og uttrykke deg klart. Det er perfekt for deg som er nysgjerrig på verden og ønsker å utvikle dine analytiske ferdigheter.
+                Vil du forstå
+                samfunnet du lever i
+                bedre? Vil du jobbe
+                med helsefag Vil du
+                forske på sosiale
+                problemer eller være
+                med å utvikle den
+                moderne
+                velferdsstaten?
+            </p>
+            <p>
+                <b>Velg sosialkunnskap!</b>
             </p>
         </div>
         <!-- bølgete linje -->
@@ -45,18 +56,18 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li><b>OLDTID OG MYTER</b></li>
-                        <li>Handler om de første menneskene og mytene om liv og død.</li>
-                        <li><b>ANTIKKEN OG SAMTALEN</b></li>
-                        <li>Handler om sivilisasjonene rundt Middelhavet</li>
-                        <li><b>MIDDELALDER OG KILDBRUK</b></li>
-                        <li>Handler om hvordan religion og filosofi ble viktig for kulturspredning</li>
-                        <li><b>RENESSANSE OG FORKLARING</b></li>
-                        <li>Handler om hvordan renessansen, boktrykkerkunsten og reformasjonen spredde nye ideer</li>
-                        <li><b>OPP LYSNINGSTIDOG PERSPEKTIVER</b></li>
-                        <li>Handler om vitenskapsrevolusjonen og frihetsidealene fra 1600 tallet</li>
-                        <li><b>NYERE TID OG KRITISK TENKNING</b></li>
-                        <li>Handler om industrisamfunnet og nye ideologier</li>
+                        <li><b>VELFERDSSTATEN</b></li>
+                        <li>Hva er en velferdsstat? Hvordan er den organisert Lær om forvaltning, lovverk, institusjoner, forskning</li>
+                        <li><b>SAMFUNNSVITENSKAPLIG METODE</b></li>
+                        <li>Variabler: alder, kjønn, sosial status, økonomi, geografi, sosialeavvikere</li>
+                        <li><b>LIVSFASENE</b></li>
+                        <li>Er det godt å være nordmann fra vugge til grav?</li>
+                        <li><b>VELFERDSFORSKJELLER</b></li>
+                        <li>Er Norge virkelig et likt samfunn?</li>
+                        <li><b>SOSIALE PROBLEMER</b></li>
+                        <li>Hvem blir rusmisbruker? Hvorfor slår mor barna? Hva gjør vi med lovbrytere?</li>
+                        <li><b>MENNESKERETTIGHETER</b></li>
+                        <li>Sikrer velferdsstaten menneskerettighetene?</li>
                     </ul>
                 </div>
                 <div class="visuelt-element">
@@ -65,26 +76,41 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        I faget «Historie og filosofi» veksler arbeidsmåtene mellom diskusjon, «filosofisk samtale», lærestoffgjennomgang og kildearbeid. «Filosofisk samtale» er en egen metode der alle som deltar, får luftet tankene sine rundt filosofiske spørsmål som «hva er lykke?» og «hva er meningen med livet?»
-                    </p>
-                    <p>
-                        Vil du ha gode karakterer? Faget hjelper deg mye særlig i norsk og historie. Faget dekker de første månedene av universitets og høyskolestudier for mange (ex.phil/ex.fac). Du får en ”flying start” og kommer lettere til gode resultater som fersk student.
+                        Det er et virkelighetsnært fag der vi diskuterer
+                        aktuelle saker i nyhetsbildet og der du kan
+                        bringe egne erfaringer inn i arbeidet. Vi ser på
+                        hvordan v i utvikler oss fra barndom til
+                        alderdom og hva som gir grunnlag for å leve et
+                        godt liv. For å forstå hvordan mennesket
+                        integreres i samfunnet og velferdsstaten
+                        fungerer, setter vi oss inn i aktuell forskning og
+                        ser film. Diskusjon og gruppearbeid blir vektlagt.
+                        Vi drar også på ekskursjoner til aktører som er
+                        aktuelle for faget, som Amnesty International,
+                        Blåkors eller Barneombudet.
                     </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/" alt="PLaceholder">
-                    <img src="../../assets/imgs/" alt="Placeholder">
+                    <img src="../../assets/imgs/sosialkunnskap/Barn_holder_hender_ikon.png" alt="Placeholder">
+                    <img src="../../assets/imgs/sosialkunnskap/trist_mann.png" alt="Placeholder">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
+                    <h3>Sentrale spørsmål</h3>
                     <p>
-                        <i>
-                            "Historie og filosofi lærer deg å se problemstillinger fra en ny synsvinkel. Gjennom dette faget har jeg lært å bli mer kritisk til min egen tankegang og har på denne måten blitt mer reflektert."
-                        </i>
-                    </p>
-                    <p>
-                        - Marit, tidligere elev
+                        Hvorfor
+                        blir noen
+                        kriminelle?
+                        Hvorfor er noen
+                        rikere enn andre? Hvorfor ble
+                        foreldrene dine oppdratt
+                        annerledes enn deg? Hvorfor
+                        har vi en velferdsstat? Hva er
+                        grunnlaget for et godt liv?
+                        Hvordan
+                        gjennomfører vi en
+                        samfunnsvitenskapelig
+                        undersøkelse?
                     </p>
                 </div>
                 <div class="mer-informasjon">
