--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <!-- informerende tekst som introduserer "programfagstypen" -->
         <div id="intro-område">
-            <p id="intro">Velkommen til elvebakken programfag! Velg et programområde for å utforske fag.</p>
+            <p id="intro">Velkommen til Elvebakken programfag! Velg et programområde for å utforske fag.</p>
         </div>
     </main>
     <!-- Footer -->
