Fikset side til markedsføring og ledelse
Mangler fargepalett

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="./idrettsfag/">Idrettsfag</a>
         </div>
         <!-- informerende tekst som introduserer "programfagstypen" -->
-        <div id="intro-område">
+        <div id="intro-område-forside">
             <p id="intro">Velkommen til elvebakken programfag! Velg et programområde for å utforske fag.</p>
         </div>
     </main>
