--- a/ssø/index.html
+++ b/ssø/index.html
@@ -63,7 +63,7 @@
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/markedsføring_og_ledelse/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/markedsføring/rosa_megafon.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Markedsføring og ledelse</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -161,7 +161,7 @@
                 <img src="../assets/imgs/kinesisk2/wall_china.png" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/markedsføring/blå_megafon.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Markedsføring og ledelse</h3>
                     <p class="fag-beskrivelse"></p>
