--- a/programfag/markedsføring_og_ledelse/index.html
+++ b/programfag/markedsføring_og_ledelse/index.html
@@ -13,7 +13,7 @@
     <header>
         <!-- toppseksjon av siden med et bakgrunnsbilde som kan endres i geofag.css-dokumentet -->
         <div id="forside-bilde">
-            <h1>Markedsføring</h1>
+            <h1>Markedsføring og ledelse</h1>
             <!-- knapp tilbake til realfagssiden -->
             <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
@@ -22,30 +22,18 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Psykologi handler om å forstå menneskets
-                tanker, emosjoner og atferd. Faget skal gi et
-                vitenskapelig perspektiv på psykologiske
-                prosesser og bidra til at elevene utvikler en
-                sammensatt og mer helhetlig forståelse av
-                mennesket. Psykologi handler om det som gjør
-                oss like, men også det som gjør oss ulike og
-                unike. I en verden preget av stadige endringer
-                og utfordringer, kan faget bidra til økt
-                medborgerskap gjennom bevisstgjøring og
-                forståelse av seg selv og andre, på individ-,
-                gruppe- og samfunnsnivå.
+                Markedsføring og ledelse handler om å forstå
+                forbrukermarkeder som stadig er i endring med fokus
+                på psykologi, kommunikasjon, strategisk
+                problemløsning og beslutningstaking. Vi lærer om hvordan vi blir påvirket av markedsføring &
+                kommunikasjon, og hvordan å påvirke andre!
             </p>
-        </div>
-        <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
-        <div id="fagnummer-knapper">
-            <a href="#fagnummer1" id = "første-fag">Psykologi 1</a>
-            <a href="#fagnummer2" id = "andre-fag">Psykologi 2</a>
         </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
         <!-- informasjon om programfaget -->
         <div id="fagnummer1" class="fag-informasjon">
-            <h2>Psykologi 1</h2>
+            <h2>Markedsføring og ledelse 1</h2>
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
@@ -55,13 +43,9 @@
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li>Individet</li>
-                        <li>Psykologiske spørsmål</li>
-                        <li>Samarbeid</li>
-                        <li>Kreativitet</li>
-                        <li>Analytisk og kritisk refleksjon</li>
-                        <li>Kunnskap om begreper</li>
-                        <li>Modeller og teorier i psykologien</li>
+                        <li>Forstå forbrukeren og situasjonen i marked for å kunne analysere hvordan konkurransemidlene blir brukt i markedsføring</li>
+                        <li>Planlegge egen mediekampanje</li>
+                        <li>Konkurransemidler er produkt, pris, distribusjon og markedskommunikasjon.</li>
                     </ul>
                 </div>
                 <div class="visuelt-element">
@@ -70,20 +54,25 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        Timene og
-                        undervisningen består blant annet av
-                        diskusjon, gjennomgang av fagstoff,
-                        dokumentarer, filmer og serier, prosjekter og
-                        caseoppgaver.
+                        I markedsføring, anvender vi kunnskaper og ferdigheter
+                        med case baserte læring hvor vi analysere situasjoner
+                        med produkter og organisasjoner fra virkelighet.
+                        Harvard Business School var banebrytende i å ta i bruk
+                        case basert læring for business fag og det er i disse
+                        timene vi utvikler oss mest i faget og lære å lede ved å
+                        vurdere og ta beslutninger selv.
                     </p>
                     <p>
-                        Eksempler på psykologiske spørsmål som blir diskutert er: "Hva er ondskap?", "Er intelligens arvelig?", "Hva er personlighet?" og "Hvordan fungerer hjernen vår?".
+                        Eksamen i Markedsføring 1 er muntlig eksamen. Det
+                        betyr en ca. 8 min presentasjon fra deg når du svarer på
+                        en case baserte oppgave du fikk 24 timer før og en ca.
+                        15-20 fagsamtale etterpå
                     </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/psykologi/placeholder_psykologi.jpg" alt="PLaceholder">
-                    <img src="../../assets/imgs/psykologi/placeholder_psykologi.jpg" alt="Placeholder">
+                    <img src="../../assets/imgs/markedsføring/hode.png" alt="Placeholder">
+                    <img src="../../assets/imgs/markedsføring/sirkler.png" alt="PLaceholder">                    
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -98,8 +87,8 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://snl.no/psykologi" target="_blank">Les mer på SNL</a></li>
-                    <li><a href="https://www.udir.no/lk20/psy01-03/" target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/markedsf%C3%B8ring" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/mfl01-03" target="_blank">Læreplan</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
