--- a/ssø/index.html
+++ b/ssø/index.html
@@ -67,8 +67,8 @@
                     <p>Markedsføring og ledelse</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/entreprenørskap/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="../programfag/pom/" class="fag_i_meny">
+                    <img src="../assets/imgs/pom/freedom_tagget.png" alt="freedom agget på en vegg" class="fagmeny_bilde">
                     <p>Politikk og menneskerettigheter</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -144,10 +144,10 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Historie og filosofi</h3>
                     <p class="fag-beskrivelse">Historie og filosofi tar deg med på en reise gjennom tidene, fra de første menneskene til vår egen samtid. Gjennom diskusjoner, kildearbeid og filosofiske samtaler får du utforske store spørsmål om liv, død, samfunn og vitenskap. Dette faget gir deg verktøy til å tenke kritisk, analysere informasjon og uttrykke deg klart. Det er perfekt for deg som er nysgjerrig på verden og ønsker å utvikle dine analytiske ferdigheter.</p>
-                    <p class="fag-sitat">"«
+                    <p class="fag-sitat">"
                         Den som vet at
                         han ingenting vet,
-                        er vis»" - Sokrates</p>
+                        er vis" - Sokrates</p>
                     <a class ="fag-se-mer-knapp" href="../programfag/hifi/">Se mer →</a>
                 </div>
             </div>
@@ -173,10 +173,10 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Politikk og menneskerettigheter</h3>
                     <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat"></p>
+                    <p class="fag-sitat">"Politikk er det muliges kunst" - Otto von Bismarck</p>
                     <a class ="fag-se-mer-knapp" href="../programfag/pom">Se mer →</a>
                 </div>
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/pom/freedom_tagget.png" class="fag-bilde">
             </div>
             <div class="fag-element">
                 <img src="../assets/imgs/" class="fag-bilde">
