--- a/programfag/pom/index.html
+++ b/programfag/pom/index.html
@@ -1,1 +1,104 @@
-Politikk og menneskerettigheter
+<!DOCTYPE html>
+<html lang="no">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../style/global.css">
+    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="./pom.css">
+    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <title>Politikk og menneskerettigheter</title>
+</head>
+<body>
+    <header>
+        <!-- toppseksjon av siden med et bakgrunnsbilde som kan endres i geofag.css-dokumentet -->
+        <div id="forside-bilde">
+            <h1>Politikk og menneskerettigheter</h1>
+            <!-- knapp tilbake til X -->
+            <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+        </div>
+    </header>
+    <main>
+        <!-- kort informerende tekst om programfaget -->
+        <div id="intro-tekst">
+            <p>
+                Historie og filosofi tar deg med på en reise gjennom tidene, fra de første menneskene til vår egen samtid. Gjennom diskusjoner, kildearbeid og filosofiske samtaler får du utforske store spørsmål om liv, død, samfunn og vitenskap. Dette faget gir deg verktøy til å tenke kritisk, analysere informasjon og uttrykke deg klart. Det er perfekt for deg som er nysgjerrig på verden og ønsker å utvikle dine analytiske ferdigheter.
+            </p>
+        </div>
+        <!-- bølgete linje -->
+        <div class="skillelinje"></div>
+        <!-- informasjon om programfaget -->
+        <div id="fagnummer1" class="fag-informasjon">
+            <h2>Politikk og menneskerettigheter</h2>
+            <div class="informasjonsbokser">
+                <div class="rask-oversikt">
+                    <h3>Rask oversikt</h3>
+                    <li>Eksamensform: <b>Skriftlig eller muntlig</b></li>
+                    <li>Bygger på andre fag: <b>Nei</b></li>
+                    <li>Gir fordypning i SSØ sammen ett av fagene: <b>
+                        <li>Sosiologi & sosialantropologi</li>
+                        <li>Samfunnsgeografi</li>
+                        <li>Sosialkunnskap</li>
+                        </b>
+                    </li>
+                </div>
+                <div class="sentrale-temaer">
+                    <h3>Sentrale temaer</h3>
+                    <ul>
+                        <li><b>OLDTID OG MYTER</b></li>
+                        <li>Handler om de første menneskene og mytene om liv og død.</li>
+                        <li><b>ANTIKKEN OG SAMTALEN</b></li>
+                        <li>Handler om sivilisasjonene rundt Middelhavet</li>
+                        <li><b>MIDDELALDER OG KILDBRUK</b></li>
+                        <li>Handler om hvordan religion og filosofi ble viktig for kulturspredning</li>
+                        <li><b>RENESSANSE OG FORKLARING</b></li>
+                        <li>Handler om hvordan renessansen, boktrykkerkunsten og reformasjonen spredde nye ideer</li>
+                        <li><b>OPP LYSNINGSTIDOG PERSPEKTIVER</b></li>
+                        <li>Handler om vitenskapsrevolusjonen og frihetsidealene fra 1600 tallet</li>
+                        <li><b>NYERE TID OG KRITISK TENKNING</b></li>
+                        <li>Handler om industrisamfunnet og nye ideologier</li>
+                    </ul>
+                </div>
+                <div class="visuelt-element">
+
+                </div>
+                <div class="hvordan-jobber-vi">
+                    <h3>Hvordan jobber vi?</h3>
+                    <p>
+                        I faget politikk og menneskerettigheter diskuterer vi aktuelle saker og vi følger med på det som skjer i verden rundt oss. Innholdet strekker seg fra lokaldemokratiet i Norge til internasjonal konflikthåndtering. Diskusjon og gruppearbeid blir vektlagt, i tillegg til fagsamtaler, aktuelle spill og rollespill, og skriftlige arbeider som fagartikler og refleksjonsnotat. Klassen har vært på omvisning på Stortinget, og hatt tett
+                        samarbeid med FN-sambandet, gjennom bl.a. foredrag og FN-rollespill sammen med andre skoler. Politikk-klassen hadde også ansvar for organisering og gjennomføring av skolevalg og ungdomspartidebatt i forbindelse med Stortingsvalget.
+                    </p>
+                </div>
+                <!-- elementer kan legges til eller fjernes -->
+                <div class="avlangt-visuelt-element">
+                    <img src="../../assets/imgs/" alt="PLaceholder">
+                    <img src="../../assets/imgs/" alt="Placeholder">
+                </div>
+                <div class="elev-sitat">
+                    <h3>Hva mener elevene?</h3>
+                    <p>
+                        <i>
+                            "I POM treffer jeg andre som er glade i å diskutere nyheter fra Norge og resten av verden"
+                        </i>
+                    </p>
+                    <p>
+                        - Eva, tidligere elev
+                    </p>
+                </div>
+                <div class="mer-informasjon">
+                    <h3>Aktuelle lenker</h3>
+                    <li><a href="https://www.udir.no/lk20/hif01-03/kompetansemaal-og-vurdering/kv520" target="_blank">Læreplan</a></li>
+                </div>
+                <!-- legg til interaktivt element her -->
+                <div class="divider-element">
+
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+    <script src="../../script/footer.js"></script>
+    <script src="../../script/global.js"></script>
+</body>
+</html>
