La til tekst om markedsføring på ssø-side

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -164,7 +164,10 @@
                 <img src="../assets/imgs/markedsføring/blå_megafon.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Markedsføring og ledelse</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse"> Markedsføring og ledelse handler om å forstå
+                                                forbrukermarkeder som stadig er i endring med fokus
+                                                på psykologi, kommunikasjon, strategisk
+                                                problemløsning og beslutningstaking.</p>
                     <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/markedsføring_og_ledelse/">Se mer →</a>
                 </div>
