La til mellomrom og komma

--- a/programfag/samfunnsøkonomi/index.html
+++ b/programfag/samfunnsøkonomi/index.html
@@ -23,7 +23,7 @@
         <div id="intro-tekst">
             <p>
                 Samfunnsøkonomi handler om å forstå det
-                økonomiske samspilletmellom ulike aktører
+                økonomiske samspillet mellom ulike aktører
                 i privat og offentlig sektor i Norge, og mellom
                 Norge og andre land.
             </p>
@@ -166,7 +166,7 @@
                         Faget er både praktisk og teoretisk. Vi bruker i stor grad teoretiske modeller som vi anvender til å drøfte og løse praktiske problemstillinger
                         og caser. Vi starter med mikro og markedskrysset/grafer med tilbud og etterspørsel ut fra økonomihøyskole-prinsippet om at modell-«teori er den
                         beste praksis». Vi fortsetter med makro, internasjonale forhold, og bærekraftig utvikling. Du lærer å drøfte balansert med fakta, grafer og
-                        innhenting av statistiske data. Vi jobber tett med Norges Bank Kunnskapssenteret og konkurransen Case-NM.
+                        innhenting av statistiske data. Vi jobber tett med Norges Bank, Kunnskapssenteret og konkurransen Case-NM.
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
