--- a/programfag/fysikk/index.html
+++ b/programfag/fysikk/index.html
@@ -180,7 +180,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    Det andre kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
+                    <iframe src="../../widgets/pendel/index.html" id="pendel"></iframe>
                 </div>
             </div>
         </div>
