Fikset litt IT-side-greier og begynte på KDA-siden
Kom på at det er flere realfagsider som trenger bilder. (IT-palett er kun en test, ikke nødvendigvis permanent)

--- a/kda/index.html
+++ b/kda/index.html
@@ -15,7 +15,7 @@
         <div id="forside">
             <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="../assets/imgs/elvebakken_logo/hvit_sirkel_bakgrunn.png" alt="Elvebakken-logo"></a>
 
-            <h1>Kunst design og arkitektur</h1>
+            <h1>Kunst, design og arkitektur</h1>
             <div id="ned-knapp"><a href="#intro-område"></a></div>
         </div>
     </header>
@@ -42,14 +42,24 @@
 
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-                <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/" alt="test bilde" class="fagmeny_bilde">
-                    <p></p>
+                <a href="../programfag/kunst_og_skapende_arbeid/" class="fag_i_meny">
+                    <img src="../assets/imgs/kunst_og_skapende/skjelett.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Kunst og skapende arbeid</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/" alt="test bilde" class="fagmeny_bilde">
-                    <p></p>
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Foto og grafikk</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../programfag/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Arkitektur og samfunn</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../programfag/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Design og bærekraft</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
             </div>
