--- a/programfag/geofag/index.html
+++ b/programfag/geofag/index.html
@@ -97,7 +97,7 @@
         <div class="skillelinje"></div>
         <!-- informasjon om [programfag] 2 -->
         <div id="fagnummer2" class="fag-informasjon">
-            <h2>Geofag 2</h2>
+            <h2>Geofag 2 (Ikke mulig å velge for 2025/26)</h2>
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
