Fikset bilder til tekforsk
:)

--- a/programfag/tekforsk/index.html
+++ b/programfag/tekforsk/index.html
@@ -70,7 +70,7 @@
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
                     <img src="../../assets/imgs/teknologi_og_forskningslære/gifs/rakett.gif" alt="TODO">
-                    <img src="../../assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="TODO">
+                    <img src="../../assets/imgs/teknologi_og_forskningslære/bro.png" alt="TODO">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -124,13 +124,13 @@
                         ToF2 bygger videre på innholdet i ToF1. Vi har et større fokus på vitenskapelig metoder, bruk av statistikk og databehandling. Vi skal se på teknologi i et historisk perspektiv og hvordan den har formet samfunnet rundt oss. Vi skal se på etiske problemstillinger knyttet opp mot teknologi. 
                     </p>
                     <p>
-                        Her også gjennomfører vi større praktiske prosjekter, men disse vil i større grad være knyttet opp mot elevvalget problemstillinger, på den måten vil ikke alle gjøre de samme tingene slik som i ToF1.
+                        Her også gjennomfører vi større praktiske prosjekter, men disse vil i større grad være knyttet opp mot elevvalget problemstillinger, på den måten vil ikke alle gjøre de samme tingene slik som i ToF1.
 
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="TODO">
-                    <img src="../../assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="TODO">
+                    <img src="../../assets/imgs/teknologi_og_forskningslære/flyvende_cola.jpg" alt="TODO">
+                    <img src="../../assets/imgs/teknologi_og_forskningslære/ting.jpg" alt="TODO">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
