--- a/realfag/index.html
+++ b/realfag/index.html
@@ -63,7 +63,7 @@
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/tekforsk/" class="fag_i_meny">
-                    <img src="../assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/teknologi_og_forskningslære/greier.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Teknologi og forskningslære</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -130,7 +130,7 @@
                 <img src="../assets/imgs/informasjonsteknologi/kode.png" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="../assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" class="fag-bilde">
+                <img src="../assets/imgs/teknologi_og_forskningslære/greier.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Teknologi og forskningslære</h3>
                     <p class="fag-beskrivelse">Teknologi- og forskningslære på Elvebakken tar deg med inn i verden av innovasjon, teknologi og vitenskapelig utforskning. Dette faget gir deg et bredt perspektiv på teknologiske prinsipper og forskningsmetoder.</p>
