Skaffet sitat til R2 :D

--- a/programfag/r_matte/index.html
+++ b/programfag/r_matte/index.html
@@ -190,10 +190,7 @@
                     <h3>Hva mener elevene?</h3>
                     <p>
                         <i>
-                            «S2 er det beste faget. Du lærer statistiske metoder for forskning og dataanalyse,
-                            som du ikke lærer i R2. Dessuten lærer du mye matematisk grunnteori som kommer til
-                            å hjelpe deg (og meg) med å forstå økonomi, forskningsmetodikk og henger samtidig
-                            med på realfagsmatematikken»
+                            «R2 er et meget spennende fag som er relevant for videre studier. Om man vil holde mulighetene åpne for å drive med realfag videre, er R2 faget for deg»
                         </i>
                     </p>
                     <p>
