Fikset matte-lenker og la til en god del på kda
Er bare legge til info på kda nå, og å bruke resten av bildene :)

--- a/kda/index.html
+++ b/kda/index.html
@@ -43,22 +43,22 @@
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
                 <a href="../programfag/kunst_og_skapende_arbeid/" class="fag_i_meny">
-                    <img src="../assets/imgs/kunst_og_skapende/skjelett.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/kunst_og_skapende/skjelett.png" alt="Skjelett kunst" class="fagmeny_bilde">
                     <p>Kunst og skapende arbeid</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/foto_og_grafikk/tre_ansikt_kunst.jpg" alt="Laserkuttet hus" class="fagmeny_bilde">
                     <p>Foto og grafikk</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/arkitektur_og_samfunn/laserkuttet_hus.jpg" alt="test bilde" class="fagmeny_bilde">
                     <p>Arkitektur og samfunn</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg" alt="test bilde" class="fagmeny_bilde">
                     <p>Design og bærekraft</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -72,9 +72,9 @@
         <!-- For å fjerne fag, slett den "fag-element" diven du vil fjerne. -->
         <div id="fag-oversikt">
             <div class="fag-element">
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/kunst_og_skapende/skjelett.png" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel"></h3>
+                    <h3 class="fag-tittel">Kunst og skapende</h3>
                     <p class="fag-beskrivelse"></p>
                     <p class="fag-sitat">"" - Person</p>
                     <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
@@ -82,12 +82,30 @@
             </div>
             <div class="fag-element">
                 <div class="fag-info">
-                    <h3 class="fag-tittel"></h3>
+                    <h3 class="fag-tittel">Foto og grafikk</h3>
                     <p class="fag-beskrivelse"></p>
                     <p class="fag-sitat">"" - Person</p>
                     <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
                 </div>
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/foto_og_grafikk/tre_ansikt_kunst.jpg" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="../assets/imgs/arkitektur_og_samfunn/laserkuttet_hus.jpg" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Arkitektur og samfunn</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - Person</p>
+                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Design og bærekraft</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - Person</p>
+                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                </div>
+                <img src="../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg" class="fag-bilde">
             </div>
         </div>
     </main>
