Lenker som førte til feil sted fikset
Vet ikke en gang hva denne siden brukes til

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="./assets/imgs/elvebakken_logo/hvit_sirkel_bakgrunn.png" alt="Elvebakken-logo"></a>
 
             <h1>Elvebakken programfag</h1>
-            <div id="ned-knapp"><a href="#intro-område"></a></div>
+            <div id="ned-knapp"><a href="#intro-område-forside"></a></div>
         </div>
     </header>
     <main>
