Ferdig arkitektur og samfunn og egen kda css

--- a/kda/index.html
+++ b/kda/index.html
@@ -47,17 +47,17 @@
                     <p>Kunst og skapende arbeid</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../programfag/foto_og_grafikk/" class="fag_i_meny">
                     <img src="../assets/imgs/foto_og_grafikk/tre_ansikt_kunst.jpg" alt="Laserkuttet hus" class="fagmeny_bilde">
                     <p>Foto og grafikk</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/arkitektur_og_samfunn/laserkuttet_hus.jpg" alt="test bilde" class="fagmeny_bilde">
+                <a href="../programfag/arkitektur_og_samfunn/" class="fag_i_meny">
+                    <img src="../assets/imgs/arkitektur_og_samfunn/digital-skisse.jpg" alt="test bilde" class="fagmeny_bilde">
                     <p>Arkitektur og samfunn</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../programfag/design_og_bærekraft/" class="fag_i_meny">
                     <img src="../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg" alt="test bilde" class="fagmeny_bilde">
                     <p>Design og bærekraft</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
@@ -76,8 +76,8 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Kunst og skapende</h3>
                     <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                    <p class="fag-sitat"></p>
+                    <a class ="fag-se-mer-knapp" href="../programfag/kunst_og_skapende_arbeid/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -85,7 +85,7 @@
                     <h3 class="fag-tittel">Foto og grafikk</h3>
                     <p class="fag-beskrivelse"></p>
                     <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../programfag/foto_og_grafikk/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/foto_og_grafikk/tre_ansikt_kunst.jpg" class="fag-bilde">
             </div>
@@ -93,9 +93,9 @@
                 <img src="../assets/imgs/arkitektur_og_samfunn/laserkuttet_hus.jpg" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Arkitektur og samfunn</h3>
-                    <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                    <p class="fag-beskrivelse">Arkitektur og samfunn er et spennende praktisk fag der du lærer mye, blandt annet hvordan arkitektur, natur og samfunn gjensidig påvirker hverandre</p>
+                    <p class="fag-sitat"></p>
+                    <a class ="fag-se-mer-knapp" href="../programfag/arkitektur_og_samfunn/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -103,7 +103,7 @@
                     <h3 class="fag-tittel">Design og bærekraft</h3>
                     <p class="fag-beskrivelse"></p>
                     <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../programfag/design_og_bærekraft/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg" class="fag-bilde">
             </div>
