Ferdig foto og grafikk

--- a/kda/index.html
+++ b/kda/index.html
@@ -83,8 +83,8 @@
             <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Foto og grafikk</h3>
-                    <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - Person</p>
+                    <p class="fag-beskrivelse">Foto og grafikk er et praktisk fag der du kan lære mange forskjellige grafiske teknikker, og kan lage din egen kunst</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/foto_og_grafikk/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/foto_og_grafikk/tre_ansikt_kunst.jpg" class="fag-bilde">
