--- a/programfag/arkitektur_og_samfunn/index.html
+++ b/programfag/arkitektur_og_samfunn/index.html
@@ -77,7 +77,8 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://www.udir.no/lk20/hif01-03/kompetansemaal-og-vurdering/kv520" target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/arkitektur" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/kda05-02" target="_blank">Læreplan</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
