Ferdig design og bærekraft

--- a/kda/index.html
+++ b/kda/index.html
@@ -101,8 +101,8 @@
             <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Design og bærekraft</h3>
-                    <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - Person</p>
+                    <p class="fag-beskrivelse">I Design og bærekraft lærer du mye nyttig, blandt annet hvordan man bruker ulike materialer og teknikker i produktutvikling</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/design_og_bærekraft/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg" class="fag-bilde">
