--- a/kda/index.html
+++ b/kda/index.html
@@ -75,7 +75,7 @@
                 <img src="../assets/imgs/kunst_og_skapende/skjelett.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Kunst og skapende</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse">I Kunst og skapende lærer man mye nyttig om kunst, både hvordan man lager det, og hvorfor det er viktig</p>
                     <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/kunst_og_skapende_arbeid/">Se mer →</a>
                 </div>
